[gd_scene load_steps=4 format=3 uid="uid://bs5y7eh8kgpuo"]

[ext_resource type="Script" path="res://Instances/AttackPaterns/ArcPatern/ArcPatern.gd" id="1_ec5vu"]
[ext_resource type="PackedScene" uid="uid://ca6aeltom7e7y" path="res://Instances/Components/ShooterComponent/ShooterComponent.tscn" id="1_nfgti"]
[ext_resource type="PackedScene" uid="uid://c1sky0kyn05tc" path="res://Instances/Components/PlayerTracker/PlayerTracker.tscn" id="3_at0qf"]

[node name="ArcPatern" type="Node2D"]
script = ExtResource("1_ec5vu")

[node name="ShooterComponent" parent="." instance=ExtResource("1_nfgti")]

[node name="PlayerTracker" parent="." instance=ExtResource("3_at0qf")]
isActive = true
